--- a/style.css
+++ b/style.css
@@ -135,14 +135,17 @@ note {
 }
 aside {
     float: right;
-    clear: right;
-    width: 25%;
+    width: 30%;
     border-left: 0.25rem solid black;
     padding-left: 0.5rem;
+    margin-left: 1rem;
+    font-size: 1rem;
     cursor: pointer;
 }
-aside + * {
-    clear: both;
+aside + aside {
+    /* for two consecutive <aside> */
+    clear: right;
+    margin-top: 0.5rem;
 }
 
 /* figure */
