--- a/style.css
+++ b/style.css
@@ -28,11 +28,8 @@ header p.med {
     margin: 0;
 }
 header p.large {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 70%;
-    width: 100%;
+    margin-bottom: 90%;
+    font-weight: bold;
     font-size: 3rem;
 }
 
