--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ figure {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    break-inside: avoid;
 }
 .figure {
     display: flex;
