Use external letterhead

--- a/_layouts/full.html
+++ b/_layouts/full.html
@@ -3,7 +3,7 @@ layout: base
 ---
 <header>
     <div>
-        <img src="letterhead.svg" alt="">
+        <img src="https://lukenk.github.io/print/letterhead.svg" alt="">
         <p class="med">
             LukeNK
         </p>
