--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke's n-week-project</title>
-    <link rel="shortcut icon" href="letterhead.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://lukenk.github.io/print/letterhead.svg" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
 </head>
