Use absolute link Prepare to add page excerpts

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,10 +5,10 @@
     <title>Luke's n-week-project</title>
     <link rel="shortcut icon" href="https://lukenk.github.io/print/letterhead.svg" type="image/x-icon">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ site.url }}/style.css">
 </head>
 <body>
     {{ content }}
 </body>
-<script src="script.js"></script>
+<script src="{{ site.url }}/script.js"></script>
 </html>
