Add front matter

--- a/_layouts/draft.html
+++ b/_layouts/draft.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<p style="text-align: right;"><i>Draft content for N-week-project by LukeNK</i></p>
+<p style="text-align: right;"><i>Draft content for N-week-project</i></p>
 <main class="loading">
     {{ content }}
 </main>
