Adjust layout for visual clarity

--- a/_layouts/draft.html
+++ b/_layouts/draft.html
@@ -1,7 +1,12 @@
 ---
 layout: base
 ---
+<style>
+    h2 {
+        break-before: auto;
+    }
+</style>
+<p style="text-align: right;"><i>Draft content for N-week-project</i></p>
 <main class="loading">
     {{ content }}
 </main>
-<p style="text-align: right;"><i>Draft content for N-week-project</i></p>
