--- a/style.css
+++ b/style.css
@@ -111,6 +111,10 @@ h4::before {
     content: counter(chapter) "." counter(section) "." counter(subsection) " ";
 }
 
+#navLevels td {
+    text-align: left;
+}
+
 mjx-assistive-mml {
     /* https://github.com/mathjax/MathJax/issues/3348 */
     text-indent: 0 ! important;
